--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
+    "@mui/lab": "^5.0.0-alpha.99",
     "@mui/material": "^5.10.4",
     "@mui/x-data-grid": "^5.17.2",
     "@testing-library/jest-dom": "^5.16.5",
