fix typescript formatter in the docker dev container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,6 +42,9 @@
 		"[javascript]": {
 			"editor.defaultFormatter": "esbenp.prettier-vscode"
 		},
+        "[typescript]": {
+			"editor.defaultFormatter": "esbenp.prettier-vscode"
+		},
 		"editor.codeActionsOnSave": {
 			"source.fixAll.eslint": true
 		},
