--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
+    "vue-chartjs": "^4.1.1",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.0"
   },
