--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "dayjs": "^1.11.5",
     "js-untar": "^2.0.0",
     "pako": "^2.0.4",
     "pinia": "^2.0.11",
