--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^3.0.0",
     "vue-chartjs": "^4.1.1",
     "vue-i18n": "^9.2.2",
+    "vue-json-viewer": "^3.0.4",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
