--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-untar": "^2.0.0",
     "pako": "^2.0.4",
     "pinia": "^2.0.11",
+    "pinia-plugin-persist": "^1.0.0",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-chartjs": "^4.1.1",
