--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"See package.json => scripts for available tests.\" && exit 0",
     "test:unit": "jest --updateSnapshot",
-    "test:unit:ci": "jest --ci",
+    "test:unit:ci": "JEST_JUNIT_OUTPUT_DIR=test/jest jest --ci --reporters=default --reporters=jest-junit",
     "test:unit:coverage": "jest --coverage",
     "test:unit:watch": "jest --watch",
     "test:unit:watchAll": "jest --watchAll",
@@ -22,6 +22,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "dayjs": "^1.11.5",
+    "jest-junit": "^14.0.1",
     "js-untar": "^2.0.0",
     "pako": "^2.0.4",
     "pinia": "^2.0.11",
