ci: pull log-viewer-test from build stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,7 @@
 variables:
   DOCKER_PROXY: $REGISTRY_NAME:5556
   REGISTRY: $REGISTRY_NAME:$REGISTRY_PORT
-  DOCKER_COMPOSE: 'docker-compose -f docker-compose.yml'
-  DOCKER_COMPOSE_TEST: 'docker-compose -f docker-compose.test.yml'
+  DOCKER_COMPOSE: 'docker-compose -f docker-compose.yml -f docker-compose.test.yml'
 stages:
   - build
   - test
@@ -39,7 +38,8 @@ unit test:
   variables:
     CONTAINER_IMAGE: $CI_PIPELINE_ID
   script:
-    - $DOCKER_COMPOSE_TEST up --build
+    - $DOCKER_COMPOSE pull --quiet log-viewer-test
+    - $DOCKER_COMPOSE run --rm --no-deps log-viewer-test -c "npm run test:unit:ci"
   artifacts:
     when: always
     reports:
