--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 COMPOSE_DOCKER_CLI_BUILD=1
 
 # Address of the docker registry
-REGISTRY_HOST=asyril-registry:5555
+REGISTRY_HOST=registry.company.asyril.com:5555
 
 # Tag used when building docker images
 CONTAINER_IMAGE=devel
